--- a/BuildingaPersonalPortfolio/styles.css
+++ b/BuildingaPersonalPortfolio/styles.css
@@ -143,3 +143,17 @@ h2 {
 }
 
 
+/*Font change*/
+
+body {
+  font-family: 'Merriweather', serif;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Teko', sans-serif; 
+}
+
+p {
+  font-family: 'Ubuntu', sans-serif; 
+}
